log
Thu 20 Apr 2023 04:39:41 PM UTC: 
 tests:  1|8
total_score: 0/70
769eede
Thu 20 Apr 2023 04:59:17 PM UTC: 
 treemap.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:40:54: error: expected ‘)’ before ‘;’ token
   40 |     TreeMap * new = (TreeMap *)malloc(sizeof(TreeMap);
      |                                      ~               ^
      |                                                      )
treemap.c:44:1: error: expected ‘,’ or ‘;’ before ‘}’ token
   44 | }
      | ^
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
In file included from test.c:4:
treemap.c:40:15: error: unused variable ‘new’ [-Werror=unused-variable]
   40 |     TreeMap * new = (TreeMap *)malloc(sizeof(TreeMap);
      |               ^~~
test.c:607: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
5e6f55a
Thu 20 Apr 2023 04:59:52 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
62962e2
